--- a/src/p2-homeworks/h5-rrd-v6/Header.module.css
+++ b/src/p2-homeworks/h5-rrd-v6/Header.module.css
@@ -1,7 +1,7 @@
 .nav {
-    grid-area: n;
-    background-color: burlywood;
-    padding: 15px;
+    /*grid-area: n;*/
+    /*background-color: burlywood;*/
+    /*padding: 15px;*/
 }
 .item {
     color: gold;
