--- a/src/p2-homeworks/h5-rrd-v6/Header.module.css
+++ b/src/p2-homeworks/h5-rrd-v6/Header.module.css
@@ -1,8 +1,9 @@
 .nav {
-    /*grid-area: n;*/
-    /*background-color: burlywood;*/
-    /*padding: 15px;*/
+    grid-area: n;
+    background-color: burlywood;
+    padding: 15px;
 }
 .item {
     color: gold;
+    display: inline-block;
 }
