--- a/src/p2-homeworks/h5-rrd-v6/Header.module.css
+++ b/src/p2-homeworks/h5-rrd-v6/Header.module.css
@@ -1,9 +1,24 @@
 .nav {
-    grid-area: n;
-    background-color: burlywood;
-    padding: 15px;
+    padding: 10px;
 }
-.item {
-    color: gold;
+
+a {
+    text-align: center;
+    width: 80px;
+    height: 25px;
     display: inline-block;
+    text-decoration: none;
+}
+.active {
+    color: purple;
+    font-weight: bold;
+}
+.PreJuniorLink {
+    color: darkorange;
+}
+.JuniorLink {
+    color: darkgreen;
+}
+.JuniorPlusLink {
+    color: darkred;
 }
