--- a/src/p2-homeworks/h5-rrd-v6/Header.module.css
+++ b/src/p2-homeworks/h5-rrd-v6/Header.module.css
@@ -1,12 +1,18 @@
 .nav {
     padding: 10px;
+    display: flex;
+    width: 265px;
+    transform: translate(-250px);
+    transition-duration: 500ms;
 }
-
+.nav:hover {
+    transform: translate(0px);
+}
 a {
     text-align: center;
     width: 80px;
     height: 25px;
-    display: inline-block;
+
     text-decoration: none;
 }
 .active {
@@ -21,4 +27,10 @@ a {
 }
 .JuniorPlusLink {
     color: darkred;
+}
+.block {
+    margin-left: 25px;
+    width: 25px;
+    height: 25px;
+    background-color: deepskyblue;
 }
